# pendulum-guy

./: .gitignore  README.md  ant.py  pendulum.py  play_ant.py  play_pendulum.py  plot.py  pyproject.toml  setup.sh
weights/: td3_ant_actor.pth  td3_ant_critic1.pth  td3_ant_critic2.pth
