[tool.poetry]
name = "recursive-intention"
version = "0.1.0"
description = "Recursive intention learning."
authors = ["Armaan Abraham <armaanabraham@g.ucla.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.0"
ruff = "^0.6.3"
torch = "^2.4.0"
ipykernel = "^6.29.5"
tqdm = "^4.66.5"
gymnasium = {extras = ["classic-control"], version = "^0.29.1"}
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
